quase pronto o formulario

--- a/estudo-chatgpt/exercicios-práticos-front-end/ex01/index.html
+++ b/estudo-chatgpt/exercicios-práticos-front-end/ex01/index.html
@@ -6,6 +6,13 @@
     <title>Exercício 1</title>
   </head>
   <body>
+    <input
+      type="text"
+      name="titleTextInput"
+      id="input"
+      value=""
+      placeholder="escreva um texto aqui..."
+    />
     <h1 id="titleText">Mude o Texto aqui!</h1>
     <button id="buttonNext">Trocar texto</button>
     <button id="buttonPrev">Voltar texto</button>
